--- a/1_pandas1_Data_Structures.ipynb
+++ b/1_pandas1_Data_Structures.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "d8d4c601",
    "metadata": {},
    "outputs": [
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "b406a271",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,8 @@
       "name    [python, c, c++, java]\n",
       "pos           [12, 13, 14, 15]\n",
       "rank              [1, 4, 3, 2]\n",
-      "dtype: object\n"
+      "dtype: object\n",
+      "[1, 4, 3, 2]\n"
      ]
     }
    ],
@@ -181,7 +182,8 @@
     "\n",
     "var3 = pd.Series(dic)\n",
     "\n",
-    "print(var3)\n"
+    "print(var3)\n",
+    "print(var3[2])\n"
    ]
   },
   {
@@ -249,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "1efd963c",
    "metadata": {},
    "outputs": [
@@ -257,7 +259,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "   0\n",
+      "0  1\n",
+      "1  2\n",
+      "2  3\n",
+      "3  4\n",
+      "4  5\n",
+      "5  6\n"
      ]
     }
    ],
@@ -269,12 +278,13 @@
     "var = pd.DataFrame(l)\n",
     "\n",
     "var\n",
-    "print(type(var))"
+    "print(type(var))\n",
+    "print(var)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 11,
    "id": "fd76f034",
    "metadata": {},
    "outputs": [
@@ -299,6 +309,62 @@
     "\n",
     "print(type(var1))\n",
     "print(var1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "75d9cf38",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "   a   s    d  e\n",
+      "0  1   6   11  y\n",
+      "1  2   7   22  a\n",
+      "2  3   8   33  s\n",
+      "3  4   9   44  h\n",
+      "4  5  10   55  e\n",
+      "5  6  55  110  d\n"
+     ]
+    }
+   ],
+   "source": [
+    "d1 = {\"a\":[1,2,3,4,5,6], \"s\":[6,7,8,9,10,55], \"d\":[11,22,33,44,55,110], \"e\":['y','a','s','h','e','d']}\n",
+    "\n",
+    "var2 = pd.DataFrame(d1)\n",
+    "\n",
+    "\n",
+    "print(type(var2))\n",
+    "print(var2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "614189ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      a     s      d    e\n",
+      "0   2.0  12.0   22.0   yy\n",
+      "1   4.0  14.0   44.0   aa\n",
+      "2   6.0  16.0   66.0   ss\n",
+      "3   8.0  18.0   88.0   hh\n",
+      "4  10.0  20.0  110.0   ee\n",
+      "5   NaN   NaN    NaN  NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "var3 = var1 + var2\n",
+    "print(var3)"
    ]
   },
   {
@@ -394,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "id": "459b27a5",
    "metadata": {},
    "outputs": [
